adding projects section

--- a/index.qmd
+++ b/index.qmd
@@ -10,20 +10,34 @@ about:
     - icon: github
       text: Github
       href: https://github.com/nainasharm
+    - icon: gmail
+      text: Email
+      url: "mailto:nainasharma@ucla.edu"
 ---
 
-Finley Malloc is the Chief Data Scientist at Wengo Analytics. When not innovating on data platforms, Finley enjoys spending time unicycling and playing with her pet iguana.
+Naina Sharma is a Statistics and Data Science and Political Science student at the University of California, Los Angeles. Download [My Resume](/Resume_Stats140.pdf)
 
 ## Education
 
-University of California, San Diego | San Diego, CA
-PhD in Mathematics | Sept 2011 - June 2015
-
-Macalester College | St. Paul, MN
-B.A in Economics | Sept 2007 - June 2011
+University of California, Los Angeles | Los Angeles, CA  
+**Statistics and Data Science B.S. | Sept 2021 - June 2025**  
+**Political Science B.A. | Sept 2021 - June 2025**  
 
 ## Experience
 
-Wengo Analytics | Head Data Scientist | April 2018 - present
+**UCLA Political Science Department** | Undergraduate Research Assistant | Jan 2024 – Present  
+At UCLA, I assist in machine learning research by web scraping image data and validating models used for computer vision applications. My work contributes to developing algorithms that estimate topic vectors and causal effects for image-based data.  
 
-GeoScynce | Chief Analyst | Spet 2012 - April 2018
+**PricewaterhouseCoopers** | Financial Risk Consulting Intern | June 2024 – Aug 2024  
+During my internship at PwC, I supported financial risk analysis by creating internal liquidity stress test procedures and optimizing regression models for compliance with federal regulations. I also performed data reconciliation across multiple sources to ensure accuracy in risk assessments.  
+
+**Bank Information Center** | Social Inclusion Fellow | June 2022 – March 2024  
+I worked on policy analysis and advocacy, researching the World Bank’s gender strategy and publishing reports on the social inclusion compliance of various development projects. My work involved monitoring international funding projects and presenting recommendations to high-level stakeholders.  
+
+**United Way of Santa Cruz County** | Intern | June 2020 – Aug 2020  
+I conducted research on social determinants of health and race relations while contributing to public outreach efforts. I also designed and wrote social media content to increase community engagement with the organization’s initiatives. 
+
+## Projects
+Here is my first [project](/projects/project_1.qmd).
+Here is my second [project](/projects/project_2.qmd).
+
