adding project 4 and reconfiguring

--- a/projects/stats101cfinal.qmd
+++ b/projects/stats101cfinal.qmd
@@ -107,7 +107,6 @@ We tested three models:
 
 [📄 **Download Full Report**](/projects/Stats 101C Final Project Paper.pdf)
 
+Reach out to me directly for full R Code.
+
 ---
-
-Let me know if you need any refinements! 🚀
-
