final tweaks on coursework

--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,7 @@ about:
 
 Naina Sharma is a fourth year Statistics and Data Science and Political Science student at the University of California, Los Angeles. After graduation, she plans to work in consulting in New York City.
 
-Download [My Resume](/Resume_Stats140.pdf).
+Download [my resume](/Resume_Stats140.pdf).
 
 ## Education
 
